# NUTRIRE

./: .env.example  .gitignore  CHALLENGE.md  FINAL_REPORT.md  PROMPTS.md  README.md  index.html  package.json  prompts.md  requirements.txt  tailwind.config.js  test.html  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
.claude/: settings.json
Music/NovaOps-v2/: README.md
Videos/FLOW/PolyVoice/: .gitignore  AGENTS.md  BUILD_ORDER.md  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  README.md  RECOVERY_PLAN.md  SECURITY.md  SPRINT_PLAN.md  STRUCTURE.md  VISION.md  pyproject.toml
Videos/FLOW/PolyVoice/docs/: adding-models.md
Videos/FLOW/PolyVoice/examples/kokoro-local/: README.md  config.yaml
Videos/FLOW/PolyVoice/examples/mock-runtime/: README.md  config.yaml
Videos/FLOW/PolyVoice/examples/openai-compatible-llm/: README.md  config.yaml
Videos/FLOW/PolyVoice/examples/openai-compatible-tts/: README.md  config.yaml
Videos/FLOW/PolyVoice/examples/qwen3-asr-local/: README.md  config.yaml
Videos/FLOW/PolyVoice/scripts/: kokoro_smoke.py  qwen3_asr_smoke.py  scaffold_model_loader.py  ws_smoke_client.py
Videos/FLOW/PolyVoice/src/polyvoice/: __init__.py  cli.py
Videos/FLOW/PolyVoice/src/polyvoice/audio/: __init__.py  agc.py  codecs.py  frames.py  resample.py
Videos/FLOW/PolyVoice/src/polyvoice/config/: __init__.py  legacy.py  loader.py  models.py  recipes.py
Videos/FLOW/PolyVoice/src/polyvoice/core/: __init__.py  events.py  exceptions.py  processor.py  session.py
Videos/FLOW/PolyVoice/src/polyvoice/runtime/: __init__.py  bootstrap.py  health.py  pipeline.py  server.py
Videos/FLOW/PolyVoice/src/polyvoice/services/: __init__.py  base.py  mocks.py  registry.py
Videos/FLOW/PolyVoice/src/polyvoice/services/asr_sdk/: __init__.py  config.py  sdk.py  service.py  types.py
Videos/FLOW/PolyVoice/src/polyvoice/services/asr_sdk/processing/: __init__.py  streaming.py
Videos/FLOW/PolyVoice/src/polyvoice/services/asr_sdk/vad/: __init__.py  base.py  energy.py  registry.py  silero.py
Videos/FLOW/PolyVoice/src/polyvoice/services/llm/: __init__.py  openai_compat.py
Videos/FLOW/PolyVoice/src/polyvoice/services/llm_sdk/: __init__.py  config.py  conversation.py  metrics.py  response_processor.py  sdk.py  service.py  turn_coordinator.py
Videos/FLOW/PolyVoice/src/polyvoice/services/llm_sdk/clients/: __init__.py  base.py  openai_compatible.py  registry.py
Videos/FLOW/PolyVoice/src/polyvoice/services/tts/: __init__.py  openai_compat.py
Videos/FLOW/PolyVoice/src/polyvoice/services/tts_sdk/: __init__.py  config.py  models.py  sdk.py  service.py
Videos/FLOW/PolyVoice/src/polyvoice/services/tts_sdk/codecs/: __init__.py  base.py  passthrough.py  registry.py
Videos/FLOW/PolyVoice/src/polyvoice/services/tts_sdk/model_loaders/: __init__.py  base.py  kokoro.py  registry.py
Videos/FLOW/PolyVoice/src/polyvoice/services/tts_sdk/pipeline/: __init__.py  audio.py  text.py
Videos/FLOW/PolyVoice/src/polyvoice/services/tts_sdk/providers/: __init__.py  base.py  local_model.py  openai_compatible.py  registry.py
Videos/FLOW/PolyVoice/src/polyvoice/transport/: __init__.py  ws_voice.py
Videos/FLOW/PolyVoice/tests/: __init__.py  conftest.py
Videos/FLOW/PolyVoice/tests/integration/: test_pipeline_mocks.py  test_pipeline_sdks.py
Videos/FLOW/PolyVoice/tests/mocks/: __init__.py
Videos/FLOW/PolyVoice/tests/unit/: test_cli.py  test_scaffold_model_loader.py  test_smoke.py
Videos/FLOW/PolyVoice/tests/unit/audio/: test_agc.py  test_codecs.py  test_frames.py  test_resample.py
Videos/FLOW/PolyVoice/tests/unit/config/: test_legacy.py  test_recipes.py
Videos/FLOW/PolyVoice/tests/unit/core/: test_events.py  test_processor.py  test_session.py
Videos/FLOW/PolyVoice/tests/unit/runtime/: test_bootstrap.py  test_bootstrap_sdk_tts.py  test_bootstrap_tts.py
Videos/FLOW/PolyVoice/tests/unit/services/: test_base.py  test_extension_contracts.py
Videos/FLOW/PolyVoice/tests/unit/services/asr_sdk/: __init__.py  test_sdk.py
Videos/FLOW/PolyVoice/tests/unit/services/llm/: test_openai_compat.py
Videos/FLOW/PolyVoice/tests/unit/services/llm_sdk/: __init__.py  test_sdk.py
Videos/FLOW/PolyVoice/tests/unit/services/tts/: test_openai_compat_tts.py
Videos/FLOW/PolyVoice/tests/unit/services/tts_sdk/: test_sdk.py
assets/: index-8ds9Olxx.js  index-BeZZRtbK.css  index-BkVprXR6.js  index-C4_NN2Z2.js  maplibre-gl-B8B6fZZ-.js  maplibre-gl-Cji5q83X.js  maplibre-gl-Dv6R2Z0k.js
docs/: BACKEND_ENRICHMENT_SPEC.md  BACKEND_REBUILD_SPEC.md  BACKEND_TODO.md  COPY.md  DESIGN.md  FINAL_SYSTEM.md  SCHEMA.md  STITCH_PROMPT.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx  types.ts
logs/: analytics.jsonl  llm_enrichment.jsonl  stage2_dedup.jsonl  stage3_geocode.jsonl  stage6_transit.jsonl  stage9_weather.jsonl  template_fills.jsonl  website_scrape.jsonl
output/: cafb_raw_features.json  stage1_raw_records.json  stage1b_enriched_records.json  stage2_deduped.json  stage3_geocoded.json  stage4_normalized.json  stage6_transit.json  stage9_weather.json
pipeline/: README.md
pipeline/scripts/: fix_languages.py  stage1_scrape.py  stage1b_enrich.py  stage2_dedup.py  stage4_normalize.py  stage5_export.py  stage7_equity.py  stage9_translate.py
scripts/: analytics_server.py  copy-spa-fallback.mjs  stage1b_enrich.py  stage3_geocode.py  stage4_normalize.py  stage5_export.py  stage6_transit.py  stage7_equity.py  stage8_tldai.py  stage9_weather.py  test_transit_weather.py
src/: App.tsx  config.py  main.tsx  types.ts
src/components/: AnimatedNumber.tsx  BackupCard.tsx  ErrorBoundary.tsx  LangSwitcher.tsx  LocationInput.tsx  TopNav.tsx
src/data/: load-data.ts  mock-orgs.ts
src/i18n/: translations.ts  useLocalizedAI.ts  useT.ts
src/lib/: freshness.ts  geocode-search.ts  navigation.ts  open-status.ts  router-base.ts  time.ts  use-first-mount.ts  use-status-label.ts  (+1 more)
state/: geocode-cache.json  stage1b-enrichment-cache.json  transit-cache.json  weather-cache.json  website-cache.json  wmata-stations-cache.json  wmata-stops-cache.json
(+99 files in other folders)
