[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "polyvoice"
version = "0.1.0a0"
description = "Model-agnostic, platform-agnostic open framework for local-first voice agents."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "NetoAI", email = "engineering@netoai.org" },
]
keywords = [
    "voice-agent",
    "voice-ai",
    "telephony",
    "asr",
    "tts",
    "llm",
    "vllm",
    "freeswitch",
    "asterisk",
    "twilio",
    "local-first",
    "on-premises",
    "hipaa",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Telecommunications Industry",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Telephony",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    # Core async + web stack — kept minimal; service/adapter deps live in extras
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",
    "pydantic>=2.9.0",
    "pyyaml>=6.0.2",
    "numpy>=1.26.0,<3.0",
    "scipy>=1.13.0",
    "loguru>=0.7.2",
    "anyio>=4.5.0",
    "httpx>=0.27.0",
    # Observability — optional at use-time, but always importable
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp>=1.27.0",
]

[project.optional-dependencies]

# ---------- ASR services ----------
nemotron = [
    "nvidia-nemo>=2.0",  # placeholder; replace with actual NeMo extras when service lands
]
qwen3-asr = [
    "vllm>=0.6.3",
]
whisper-local = [
    "faster-whisper>=1.0",
]
deepgram = [
    "deepgram-sdk>=3.7",
]
assemblyai = [
    "assemblyai>=0.34",
]

# ---------- LLM services ----------
vllm = [
    "vllm>=0.6.3",
]
ollama = [
    "ollama>=0.4",
]
openai-compat = [
    "openai>=1.50",
]
anthropic = [
    "anthropic>=0.39",
]
mistral = [
    "mistralai>=1.2",
]

# ---------- TTS services ----------
magpie = []  # in-process model; deps come from model artifact
soprano = []
kokoro = [
    "kokoro>=0.3",
]
chatterbox = []
maya1 = [
    "vllm>=0.6.3",
    "snac>=1.2",
]
voxtral = [
    "vllm>=0.6.3",  # actually vllm-omni — placeholder for the upstream package
]
elevenlabs = [
    "elevenlabs>=1.10",
]
cartesia = [
    "cartesia>=1.4",
]
piper = [
    "piper-tts>=1.2",
]

# ---------- Telephony adapters ----------
twilio = [
    "twilio>=9.3",
]
freeswitch = [
    "greenswitch>=1.0",  # ESL client
]
asterisk = [
    "ari>=0.1",
]
vonage = [
    "vonage>=4.0",
]
telnyx = [
    "telnyx>=2.0",
]
plivo = [
    "plivo>=4.50",
]
sip = [
    "aiortc>=1.9",  # placeholder; raw SIP via pjsip or drachtio bridge eventually
]

# ---------- Knowledge / RAG ----------
rag = [
    "qdrant-client>=1.12",
    "sentence-transformers>=3.2",
    "rank-bm25>=0.2.2",
]

# ---------- Bundles ----------
all-services = [
    "polyvoice[nemotron,qwen3-asr,whisper-local,vllm,ollama,openai-compat,anthropic,mistral,kokoro,maya1,voxtral,elevenlabs,cartesia,piper]",
]
all-telephony = [
    "polyvoice[twilio,freeswitch,asterisk,vonage,telnyx,plivo,sip]",
]
all = [
    "polyvoice[all-services,all-telephony,rag]",
]

# ---------- Development ----------
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "aioresponses>=0.7.6",
    "ruff>=0.7.0",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "types-pyyaml>=6.0",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
]

[project.urls]
Homepage = "https://github.com/adx-coder/PolyVoice"
Repository = "https://github.com/adx-coder/PolyVoice"
Issues = "https://github.com/adx-coder/PolyVoice/issues"
Changelog = "https://github.com/adx-coder/PolyVoice/blob/main/CHANGELOG.md"

[project.scripts]
polyvoice = "polyvoice.cli:main"

# ---------- Hatchling ----------
[tool.hatch.build.targets.wheel]
packages = ["src/polyvoice"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/VISION.md",
    "/CHANGELOG.md",
]

# ---------- Ruff ----------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "RUF",  # ruff-specific
    "ASYNC",
    "S",    # flake8-bandit (security)
    "PT",   # pytest style
    "SIM",  # simplify
    "TCH",  # type-checking
]
ignore = [
    "E501",  # line too long — handled by formatter
    "S101",  # assert allowed in tests
    "B008",  # function call in default argument (FastAPI Depends pattern)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "PT"]
"benchmarks/**/*.py" = ["S"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------- Mypy ----------
[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = [
    "tests.*",
    "benchmarks.*",
]
disallow_untyped_defs = false

# ---------- Pytest ----------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:websockets.*",
]
markers = [
    "gpu: tests that require a GPU (skipped by default in CI)",
    "telephony: tests that require a real telephony provider",
    "slow: tests that take more than 5 seconds",
    "integration: integration tests",
    "e2e: end-to-end tests",
]
addopts = "-ra --strict-markers --strict-config"

# ---------- Coverage ----------
[tool.coverage.run]
source = ["src/polyvoice"]
branch = true
omit = [
    "*/tests/*",
    "*/benchmarks/*",
    "*/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
fail_under = 60
